# MatrixMultiplicationHPX

./: .clang_complete  .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  SConscript  SConstruct  aligned_allocator.hpp  build-MatrixMultiplicationHPX.sh  build-all.sh  build_matrix_multiplication_tuner.sh  circle.yml  custom.py_example  evaluate.py  index_iterator.hpp  matrixMultiplyComponent.cpp  matrix_multiplication_component.cpp  matrix_multiplication_component.hpp  matrix_multiplication_kernel.hpp  matrix_multiply.cpp  matrix_multiply_algorithm.hpp  matrix_multiply_algorithms.hpp  matrix_multiply_combined.cpp  matrix_multiply_combined.hpp  matrix_multiply_distributed.cpp  matrix_multiply_distributed.hpp  matrix_multiply_kernel.hpp  matrix_multiply_kernel_test.cpp  matrix_multiply_kernel_test.hpp  matrix_multiply_kernel_tiled.cpp  matrix_multiply_kernel_tiled.hpp  matrix_multiply_looped.hpp  matrix_multiply_multiplier.cpp  matrix_multiply_multiplier.hpp  matrix_multiply_naive.hpp  matrix_multiply_node.cpp  matrix_multiply_node.hpp  matrix_multiply_par.hpp  (+17 more)
circle_ci_scripts/: build-MatrixMultiplicationHPX.sh  build-Vc.sh  build-boost.sh  build-hpx.sh
learning/: MetaProgrammingCPP.cpp
otherExperiments/: Makefile  README.md  benchmark.cpp  mult.hpp  multASM.cpp  multBlocked.cpp  multCounter.cpp  multExchanged.cpp  multGPU.cpp  multGPUASM.cpp  multIntrinLoop.cpp  multNaive.cpp  multRegister.cpp  multTransposed.cpp
reference_kernels/: kernel.hpp  kernel_test.cpp  kernel_test.hpp  kernel_tiled.cpp  kernel_tiled.hpp  naive.hpp
scripts/: build-AutoTuneTMP.sh  build-MatrixMultiplicationHPX.sh  build-Vc.sh  build-boost.sh  build-cmake.sh  build-cppjit.sh  build-hpx.sh  build-jemalloc.sh
src/: SConscript  aligned_allocator.hpp  matrix_multiply.cpp  util.hpp
src/combined_tuning_application/: combined_tuner_common.hpp  combined_tuning.cpp  fast_combined_tuning.cpp  pvn_test.cpp
src/matrix_multiply_application/: matrix_multiply.cpp
src/memory_layout/: index_iterator.hpp  loop_nest.hpp  memory_layout_exception.hpp  tile_array.hpp  tile_iterator.hpp  tile_view.hpp  tile_view_iterator.hpp  tiling_info_dim.hpp  util.hpp
src/reference_kernels/: kernel.hpp  kernel_test.cpp  naive.hpp
src/tests/: test_algorithms.cpp  test_combined.cpp  test_hpx_main.cpp  test_hpx_main.hpp  test_iterate_tiles.cpp  test_looped.cpp  test_naive.cpp  test_pseudodynamic.cpp  test_semi.cpp  test_single.cpp  test_tile_view.cpp  tests.cpp  tests.hpp
src/util/: create_identity_matrix.hpp  create_random_matrix.hpp  matrix_multiplication_exception.hpp  pattern_matrices.hpp  transpose_matrix.hpp  util.hpp
src/variants/: algorithms.hpp  combined.cpp  combined.hpp  index_iterator.hpp  kernel.hpp  kernel_test.hpp  kernel_tiled.cpp  kernel_tiled.hpp  looped.hpp  naive.hpp  proposal.cpp  proposal.hpp  pseudodynamic.cpp  pseudodynamic.hpp  semi.cpp  semi.hpp  single.cpp  single.hpp  static_improved.cpp
src/variants/combined_kernel/: combined_kernel.cpp  parameters.hpp
src/variants/components/: multiplier.cpp  multiplier.hpp  recursive.cpp  recursive.hpp
src/variants/hardware_query_kernel/: hardware_query_kernel.cpp
valgrind/: SConstruct  matrix_multiply.cpp  matrix_multiply_kernel_test.hpp  matrix_multiply_kernel_tiled.hpp  matrix_multiply_util.hpp  performance_configuration.txt
variants/: algorithms.hpp  combined.cpp  combined.hpp  index_iterator.hpp  looped.hpp  matrix_multiply_work.hpp  multiplier.cpp  multiplier.hpp  recursive.cpp  recursive.hpp  semi.cpp  semi.hpp  static_improved.cpp  static_improved.hpp
